k8s/namespace.yaml
# kubectl create namespace my-namespace
apiVersion: v1
kind: Namespace
metadata:
  name: my-namespace
