k8s/multiple-c.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multi-container-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: multi-container-app
  template:
    metadata:
      labels:
        app: multi-container-app
    spec:
      containers:
        - name: nginx-container
          image: nginx:alpine
          ports:
            - containerPort: 80

        - name: sidecar-logger
          image: busybox
          command: ["sh", "-c", "while true; do echo 'Logging from sidecar'; sleep 5; done"]
